@@ -1,3 +1,7 @@
+2014-12-20  Ben Finney  <ben+python@benfinney.id.au>
+
+    * Remove custom test suite creation, we now use ‘unittest2’.
+
 2014-12-17  Ben Finney  <ben+python@benfinney.id.au>
 
     * Discriminate between different ‘fileno’ method behaviours.
